--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -106,6 +106,7 @@ jobs:
             -p 8082:8082 \
             --name "marketdata-service" \
             --network "metradingplat-network" \
+            --restart "unless-stopped" \
             --label project="metradingplat" \
             --label service="marketdata-service" \
             -e SPRING_PROFILES_ACTIVE="prod" \
