--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.json.trusted.packages: "*"
+        "[spring.json.trusted.packages]": "*"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -22,11 +22,11 @@ eureka:
 # Logging para producción
 logging:
   level:
-    com.metradingplat.marketdata: INFO
-    '[com.metradingplat.marketdata.infrastructure.output.external.tastytrade]': DEBUG
-    org.springframework.kafka: WARN
-    org.springframework.web.socket: DEBUG
-    org.springframework.web.socket.client: DEBUG
+    "[com.metradingplat.marketdata]": INFO
+    "[com.metradingplat.marketdata.infrastructure.output.external.tastytrade]": DEBUG
+    "[org.springframework.kafka]": WARN
+    "[org.springframework.web.socket]": DEBUG
+    "[org.springframework.web.socket.client]": DEBUG
 
 # TastyTrade Production Configuration
 tastytrade:
